[project]
name = "quicksignpdf"
version = "0.1.0"
description = "App Qt para estampar firmas dibujadas en PDF con preview"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yeiner David Lopez (Deank)" }]
license = { text = "MIT" }
dependencies = ["PyMuPDF>=1.24", "PySide6>=6.8"]

[project.scripts]
quicksign-pdf = "quicksignpdf.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quicksignpdf = ["assets/*"]
